--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -10,59 +10,59 @@
   <style>
     :root {
       --gold: #FFD700;
-      --black: #000000;
-      --dark-gray: #333333;
+      --black: #000;
+      --dark-gray: #333;
       --light-gray: #f4f4f4;
-      --white: #FFFFFF;
+      --white: #fff;
       --radius: 10px;
-      --shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+      --shadow: 0 6px 20px rgba(0,0,0,0.15);
       --transition: 0.3s;
     }
-    *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
+    *, *::before, *::after { box-sizing: border-box; margin:0; padding:0; }
     body {
       font-family: 'Poppins', 'Montserrat', sans-serif;
       background: var(--light-gray);
       color: var(--dark-gray);
-      line-height: 1.6;
+      line-height:1.6;
       scroll-behavior: smooth;
     }
     header {
       background: var(--black);
       color: var(--gold);
       text-align: center;
-      padding: 2rem 1rem;
+      padding:2rem 1rem;
     }
     header h1 {
-      font-size: 2.5rem;
-      letter-spacing: 2px;
+      font-size:2.5rem;
+      letter-spacing:2px;
+      margin-bottom:0.5rem;
     }
     header p {
-      font-size: 1rem;
-      margin-top: 0.5rem;
+      font-size:1rem;
     }
     nav {
       background: var(--dark-gray);
-      display: flex;
-      justify-content: center;
-      gap: 1.5rem;
-      padding: 1rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      display:flex;
+      justify-content:center;
+      gap:1.5rem;
+      padding:1rem;
+      position:sticky;
+      top:0;
+      z-index:1000;
     }
     nav a {
       color: var(--white);
-      text-decoration: none;
-      font-weight: 600;
-      position: relative;
-      padding: 0.25rem;
+      text-decoration:none;
+      font-weight:600;
+      position:relative;
+      padding:0.25rem;
       transition: color var(--transition);
     }
     nav a::after {
-      content: '';
-      position: absolute;
-      left: 0; bottom: -4px;
-      width: 0; height: 2px;
+      content:'';
+      position:absolute;
+      left:0; bottom:-4px;
+      width:0; height:2px;
       background: var(--gold);
       transition: width var(--transition);
     }
@@ -70,100 +70,97 @@
       color: var(--gold);
     }
     nav a:hover::after {
-      width: 100%;
+      width:100%;
     }
     .hero {
       background: url('https://images.unsplash.com/photo-1584440856154-01862db26141?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
-      background-attachment: scroll;
-      min-height: 60vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      position: relative;
+      min-height:60vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      text-align:center;
+      position:relative;
       color: var(--white);
     }
     .hero::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.5);
+      content:'';
+      position:absolute;
+      inset:0;
+      background: rgba(0,0,0,0.5);
     }
     .hero-content {
-      position: relative;
-      z-index: 1;
-      max-width: 700px;
-      margin: 0 1rem;
+      position:relative;
+      z-index:1;
+      max-width:700px;
+      margin:0 1rem;
     }
     .hero-content h2 {
-      font-size: 2.75rem;
-      margin-bottom: 1rem;
-      letter-spacing: 2px;
+      font-size:2.75rem;
+      margin-bottom:1rem;
+      letter-spacing:2px;
     }
     .hero-content p {
-      font-size: 1.25rem;
-      margin-bottom: 2rem;
+      font-size:1.25rem;
+      margin-bottom:2rem;
     }
     .hero-content .btn {
       background: var(--gold);
       color: var(--black);
-      padding: 0.75rem 2rem;
-      font-weight: 700;
-      border: none;
-      border-radius: var(--radius);
-      cursor: pointer;
+      padding:0.75rem 2rem;
+      font-weight:700;
+      border:none;
+      border-radius:var(--radius);
+      cursor:pointer;
       transition: transform var(--transition), box-shadow var(--transition);
-      text-decoration: none;
-      display: inline-block;
+      text-decoration:none;
     }
     .hero-content .btn:hover {
       transform: translateY(-3px);
       box-shadow: var(--shadow);
     }
     main {
-      padding: 3rem 1rem;
-      display: flex;
-      justify-content: center;
+      padding:3rem 1rem;
+      display:flex;
+      justify-content:center;
     }
     .form-card {
       background: var(--white);
-      padding: 2.5rem;
-      border-radius: var(--radius);
+      padding:2.5rem;
+      border-radius:var(--radius);
       box-shadow: var(--shadow);
-      max-width: 500px;
-      width: 100%;
+      max-width:500px;
+      width:100%;
     }
     .form-card label {
-      display: block;
-      margin-bottom: 0.5rem;
-      font-weight: 500;
+      display:block;
+      margin-bottom:0.5rem;
+      font-weight:500;
     }
     .form-card select,
     .form-card input {
-      width: 100%;
-      padding: 0.75rem;
-      margin-bottom: 1.5rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-family: inherit;
+      width:100%;
+      padding:0.75rem;
+      margin-bottom:1.5rem;
+      border:1px solid #ccc;
+      border-radius:4px;
+      font-family:inherit;
       transition: border-color var(--transition);
     }
     .form-card select:focus,
     .form-card input:focus {
-      outline: none;
+      outline:none;
       border-color: var(--gold);
     }
     .form-card button {
-      display: block;
-      width: 100%;
-      padding: 1rem;
+      width:100%;
+      padding:1rem;
       background: var(--gold);
       color: var(--black);
-      font-size: 1rem;
-      font-weight: 700;
-      border: none;
-      border-radius: var(--radius);
-      cursor: pointer;
+      font-size:1rem;
+      font-weight:700;
+      border:none;
+      border-radius:var(--radius);
+      cursor:pointer;
       transition: background var(--transition), transform var(--transition);
     }
     .form-card button:hover {
@@ -171,25 +168,21 @@
       transform: translateY(-2px);
     }
     .result {
-      margin-top: 1.5rem;
-      font-size: 1.25rem;
-      text-align: center;
-      font-weight: 700;
+      margin-top:1.5rem;
+      font-size:1.25rem;
+      text-align:center;
+      font-weight:700;
     }
     footer {
       background: var(--black);
       color: var(--white);
-      text-align: center;
-      padding: 1.5rem 1rem;
-      margin-top: 3rem;
+      text-align:center;
+      padding:1.5rem 1rem;
+      margin-top:3rem;
     }
-    @media (max-width: 600px) {
-      .hero-content h2 {
-        font-size: 2.25rem;
-      }
-      .form-card {
-        padding: 2rem;
-      }
+    @media(max-width:600px) {
+      .hero-content h2 { font-size:2.25rem; }
+      .form-card { padding:2rem; }
     }
   </style>
 </head>
@@ -212,12 +205,12 @@
     <div class="hero-content">
       <h2>Calcola la Stima del Tuo Oro</h2>
       <p>Ottieni un valore stimato in pochi secondi inserendo carati e peso.</p>
-      <a href="#form" class="btn">Inizia Ora</a>
+      <a href="#stima-form" class="btn">Inizia Ora</a>
     </div>
   </section>
 
   <main>
-    <div class="form-card" id="form">
+    <div class="form-card">
       <form id="stima-form">
         <label for="carati">Seleziona i carati</label>
         <select id="carati" required>
@@ -240,17 +233,14 @@
   <footer>&copy; 2025 Compro Oro Frascati</footer>
 
   <script>
-    const prezziOro = { 24: 60, 22: 55, 18: 45, 14: 35 };
-    document.getElementById('stima-form').addEventListener('submit', e => {
+    const prezziOro = { 24:60,22:55,18:45,14:35 };
+    document.getElementById('stima-form').addEventListener('submit',e=>{
       e.preventDefault();
-      const carati = document.getElementById('carati').value;
-      const peso = parseFloat(document.getElementById('peso').value);
-      const out = document.getElementById('risultato');
-      if (carati && peso > 0) {
-        out.innerText = `Valore stimato: €${(prezziOro[carati] * peso).toFixed(2)}`;
-      } else {
-        out.innerText = 'Per favore compila tutti i campi.';
-      }
+      const carati=document.getElementById('carati').value;
+      const peso=parseFloat(document.getElementById('peso').value);
+      const out=document.getElementById('risultato');
+      if(carati && peso>0){ out.innerText=`Valore stimato: €${(prezziOro[carati]*peso).toFixed(2)}`; }
+      else { out.innerText='Per favore compila tutti i campi.'; }
     });
   </script>
 </body>
