--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -12,6 +12,7 @@
       --gold: #FFD700;
       --black: #000;
       --dark-gray: #333;
+      --dark-gray2: #2a2a2a;
       --light-gray: #f4f4f4;
       --white: #fff;
       --radius: 10px;
@@ -34,112 +35,144 @@
     }
     header h1 { font-size:2.5rem; letter-spacing:2px; margin-bottom:0.5rem; }
     header p { font-size:1rem; }
+    /* NAVBAR */
     nav {
-      background: var(--dark-gray);
-      display:flex; justify-content:center; gap:1.5rem;
-      padding:1rem; position:sticky; top:0; z-index:1000;
+      background: var(--dark-gray2);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    nav .logo { color: var(--white); font-weight: 700; font-size: 1.25rem; }
+    nav .menu {
+      display: flex;
+      gap:1.5rem;
     }
     nav a {
-      color: var(--white); text-decoration:none; font-weight:600;
-      position:relative; padding:0.25rem;
+      color: var(--white);
+      text-decoration:none;
+      font-weight:600;
+      position:relative;
+      padding:0.25rem;
       transition: color var(--transition);
     }
+    nav a.active, nav a:hover { color: var(--gold); }
     nav a::after {
-      content:''; position:absolute; left:0; bottom:-4px;
-      width:0; height:2px; background: var(--gold);
+      content: '';
+      position:absolute;
+      left:0; bottom:-4px;
+      width:0; height:2px;
+      background: var(--gold);
       transition: width var(--transition);
     }
-    nav a:hover { color: var(--gold); }
-    nav a:hover::after { width:100%; }
+    nav a.active::after, nav a:hover::after { width:100%; }
+    .hamburger {
+      display:none;
+      font-size:1.5rem;
+      color: var(--white);
+      cursor:pointer;
+    }
+    /* HERO */
     .hero {
       background: url('https://images.unsplash.com/photo-1540555700478-4be289fbecef?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
-      min-height:50vh; display:flex; align-items:center; justify-content:center;
-      text-align:center; position:relative; color: var(--white);
+      min-height:50vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      text-align:center;
+      position:relative;
+      color: var(--white);
     }
-    .hero::before {
-      content:''; position:absolute; inset:0; background: rgba(0,0,0,0.5);
-    }
-    .hero-content { position:relative; z-index:1; max-width:700px; margin:0 1rem; }
-    .hero-content h2 { font-size:2.5rem; margin-bottom:1rem; letter-spacing:2px; }
+    .hero::before { content:'';position:absolute;inset:0;background:rgba(0,0,0,0.5); }
+    .hero-content { position:relative;z-index:1;max-width:700px;margin:0 1rem; }
+    .hero-content h2 { font-size:2.5rem;margin-bottom:1rem;letter-spacing:2px; }
     .hero-content p { font-size:1.2rem; }
+    /* SEZIONI */
     .section { padding:4rem 1rem; text-align:center; }
-    .section h3 { font-size:2rem; margin-bottom:1rem; color:var(--black); }
-    .features {
-      display:grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px,1fr));
-      gap:2rem;
-      margin-top:2rem;
-    }
-    .feature-card {
-      background: var(--white); padding:2rem;
-      border-radius:var(--radius); box-shadow:var(--shadow);
-      transition: transform var(--transition), box-shadow var(--transition);
-    }
-    .feature-card:hover {
-      transform: translateY(-5px); box-shadow:0 10px 25px rgba(0,0,0,0.2);
-    }
-    .feature-card i {
-      font-size:2rem; color:var(--gold); margin-bottom:1rem;
-    }
-    .feature-card h4 { margin-bottom:0.5rem; font-size:1.25rem; font-weight:600; }
+    .section h3 { font-size:2rem;margin-bottom:1rem;color:var(--black); }
+    .features { display:grid; grid-template-columns:repeat(auto-fit, minmax(240px,1fr)); gap:2rem; margin-top:2rem; }
+    .feature-card { background: var(--white); padding:2rem; border-radius:var(--radius); box-shadow:var(--shadow); transition:transform var(--transition),box-shadow var(--transition); }
+    .feature-card:hover { transform:translateY(-5px); box-shadow:0 10px 25px rgba(0,0,0,0.2); }
+    .feature-card i { font-size:2rem;color:var(--gold);margin-bottom:1rem; }
+    .feature-card h4 { margin-bottom:0.5rem;font-size:1.25rem;font-weight:600; }
     .feature-card p { font-size:1rem; }
-    footer {
-      background: var(--black); color:var(--white);
-      text-align:center; padding:1.5rem 1rem; margin-top:3rem;
-    }
-    @media(max-width:600px) {
-      .hero-content h2 { font-size:2rem; }
+    footer { background: var(--black); color:var(--white); text-align:center; padding:1.5rem 1rem; margin-top:3rem; }
+    /* RESPONSIVE */
+    @media(max-width:768px) {
+      .hamburger { display:block; }
+      nav .menu { display:none; flex-direction:column; gap:1rem; background:var(--dark-gray2); position:absolute; top:100%; left:0; width:100%; padding:1rem 2rem; }
+      nav .menu.open { display:flex; }
+      nav { padding:1rem; }
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Chi Siamo</h1>
-    <p>Compro Oro Frascati - Il nostro servizio mobile di acquisto oro</p>
+    <p>Il nostro servizio mobile di acquisto oro direttamente da te</p>
   </header>
+
   <nav>
-    <a href="index.html">Home</a>
-    <a href="stima.html">Stima Oro</a>
-    <a href="chi-siamo.html" class="active">Chi Siamo</a>
-    <a href="come-funziona.html">Come Funziona</a>
-    <a href="faq.html">FAQ</a>
-    <a href="contatti.html">Contatti</a>
+    <div class="logo">COF</div>
+    <div class="hamburger"><i class="fas fa-bars"></i></div>
+    <div class="menu">
+      <a href="index.html">Home</a>
+      <a href="stima.html">Stima Oro</a>
+      <a href="chi-siamo.html" class="active">Chi Siamo</a>
+      <a href="come-funziona.html">Come Funziona</a>
+      <a href="faq.html">FAQ</a>
+      <a href="contatti.html">Contatti</a>
+    </div>
   </nav>
+
   <section class="hero">
     <div class="hero-content">
       <h2>Siamo dove sei tu</h2>
-      <p>Un compro oro senza sede fissa: su appuntamento veniamo direttamente da te, ovunque ti trovi.</p>
+      <p>Su appuntamento veniamo direttamente da te con equipaggiamento professionale.</p>
     </div>
   </section>
+
   <section class="section">
     <h3>La nostra missione</h3>
-    <p>Offrire un servizio di acquisto oro sicuro, professionale e comodo: niente spostamenti, nessuna attesa in coda.</p>
+    <p>Offrire un’esperienza sicura, rapida e trasparente: nessuna sede fissa, massima comodità.</p>
   </section>
+
   <section class="section">
-    <h3>Come funzioniamo</h3>
+    <h3>Come funziona</h3>
     <div class="features">
       <div class="feature-card">
         <i class="fas fa-calendar-alt"></i>
         <h4>Appuntamento Online</h4>
-        <p>Programma il ritiro dell’oro con pochi click, scegliendo giorno e fasce orarie.</p>
+        <p>Prenota in pochi click l’orario più comodo per te.</p>
       </div>
       <div class="feature-card">
-        <i class="fas fa-truck"></i>
+        <i class="fas fa-truck-loading"></i>
         <h4>Servizio Mobile</h4>
-        <p>Il nostro team raggiunge la tua abitazione o ufficio con kit professionale.</p>
+        <p>Ci spostiamo con kit certificato per la valutazione direttamente a casa tua.</p>
       </div>
       <div class="feature-card">
-        <i class="fas fa-lock"></i>
-        <h4>Sicurezza Totale</h4>
-        <p>Valutazione trasparente e pagamenti immediati con documentazione ufficiale.</p>
+        <i class="fas fa-shield-alt"></i>
+        <h4>Sicurezza</h4>
+        <p>Valutazioni trasparenti e pagamenti istantanei, con documenti ufficiali.</p>
       </div>
       <div class="feature-card">
         <i class="fas fa-tools"></i>
-        <h4>Equipaggiamento Professionale</h4>
-        <p>Bilance di precisione, kit di prova, e strumenti certificati per una stima accurata.</p>
+        <h4>Equipaggiamento</h4>
+        <p>Utilizziamo bilance di precisione e strumenti professionali per ogni tipo di oro.</p>
       </div>
     </div>
   </section>
-  <footer>&copy; 2025 Compro Oro Frascati - Tutti i diritti riservati</footer>
+
+  <footer>&copy; 2025 Compro Oro Frascati</footer>
+
+  <script>
+    // Toggle mobile menu
+    const ham = document.querySelector('.hamburger');
+    const menu = document.querySelector('.menu');
+    ham.addEventListener('click', () => menu.classList.toggle('open'));
+  </script>
 </body>
 </html>
